[package]
name = "gaffer"
description = "Prioritised, parallel job scheduler with concurrent exclusion, job merging, recurring jobs and load limiting for lower priorities."
repository = "https://github.com/survemobility/gaffer/"
keywords = ["job", "scheduler", "priority"]
categories = ["concurrency"]
version = "0.1.0"
authors = ["Mike Bush <mike@survemobility.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
crossbeam-channel = "0.5.1"
log = "0.4.14"
parking_lot = "0.11.2"

[dev-dependencies]
env_logger = "0.9.0"
futures = { version = "0.3.17", features = ["executor"] }
